Better handling of different subtypes of advancement toasts (FTBQuests primary)
TODO: better handling of title, description, and announcement for FTBQuests